<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal1">

    <Button
        android:id="@+id/JSimples"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="290dp"
        android:text="@string/JSimples"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/JComposto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:text="@string/JComposto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JSimples"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/Desconto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="128dp"
        android:text="@string/desconto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JComposto" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="32dp"
        android:text="@string/info1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/JSimples"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>