<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Desconto">

    <EditText
        android:id="@+id/InputValorTempo"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="197dp"
        android:layout_height="51dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:ellipsize="middle"
        android:text="@string/Tempo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputValorTaxa" />

    <EditText
        android:id="@+id/InputValorTaxa"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="197dp"
        android:layout_height="46dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:text="@string/Taxa"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputValorProduto" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="243dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:text="@string/TituloDescontoTela"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/InputValorProduto"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="197dp"
        android:layout_height="46dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/ValorNominal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtVoltar"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="32dp"
        android:text="@string/BtVoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BtCalcular"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BtCalcular"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="32dp"
        android:text="@string/BtCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BtVoltar" />

</androidx.constraintlayout.widget.ConstraintLayout>